# SLAM-EKF

./: CMakeLists.txt  package.xml
data/: small_track .csv
include/motion_update_pkg/: load_landmarks.hpp
launch/: ekf_localization.launch.py
rosbag_localisation/: metadata.yaml
rosbag_motion_update/: metadata.yaml
rosbag_motion_update/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
rosbag_motion_update/log/: latest_build
src/: data_assoc_trainee.cpp  ekf_localization_node.cpp  ekf_visualizer_node.cpp  load_landmarks.cpp  motion_update_node.cpp  pose_visualizer_node.cpp
